<resources>
    <string name="app_name">AmriHanif_1202150075_Modul1</string>
    <string name="makan_malam">MAKAN MALAM</string>
    <string name="dengan_milea">Dengan Milea</string>
    <string name="makanan">Masukkan makanan</string>
    <string name="harga">Masukkan porsi</string>
    <string name="eatbus">EATBUS</string>
    <string name="abnormal">ABNORMAL</string>
    <string name="tempat">tempat</string>
    <string name="Menu">Menu</string>
    <string name="menu">Menu</string>
    <string name="porsi">porsi</string>
    <string name="jumlahporsi">jumlahPorsi</string>
    <string name="JumlahHarga">harga</string>
    <string name="Nilaiharga">harga</string>
</resources>
