<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="23dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.amrihanif.amrihanif_1202150075_modul1.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/makan_malam"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/dengan_milea"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="93dp" />

    <EditText
        android:id="@+id/makanan"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/makanan" />

    <EditText
        android:id="@+id/jumlah"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/harga" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btEatBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@color/colorAccent"
            android:onClick="eatbus"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/eatbus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btAbnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@color/colorAccent"
            android:onClick="Abnormal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/abnormal"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
